# opportunity-intelligence-

./: .gitignore  After making these changes, you can run the command  Then commit with the message  pyproject.toml
.github/workflows/: hiring-signal-batch.yml
configs/: offer_example.yaml
opportunity_intel/: entity_resolution.py  huntrix.py  models.py  pack.py  signals.py
scripts/: opportunity_pack.py  run_hiring_batch.py
signals/: hiring_sources.yaml
tests/: test_pack.py
